[gd_scene load_steps=20 format=4 uid="uid://u8lyraii0841"]

[ext_resource type="Script" uid="uid://dfi1ut6rfxco6" path="res://level.gd" id="1_u52ul"]
[ext_resource type="Texture2D" uid="uid://dg7so6yfbhdax" path="res://Simple Tower Defense/Environment/Grass/spr_grass_02.png" id="2_0b4ue"]
[ext_resource type="PackedScene" uid="uid://fcdbjnjocrk" path="res://enemies/enemy_follow_2d.tscn" id="4_1ainy"]
[ext_resource type="PackedScene" uid="uid://58m2c72g8y1j" path="res://path_tile_map_layer.tscn" id="4_f2txt"]
[ext_resource type="Texture2D" uid="uid://ckr58u22psqx4" path="res://Simple Tower Defense/Environment/Tile Set/blank_tileset.png" id="6_km5ld"]
[ext_resource type="Texture2D" uid="uid://6ynp20u8kgek" path="res://Simple Tower Defense/Environment/Decoration/spr_tree_01_normal.png" id="6_v5j5c"]
[ext_resource type="Texture2D" uid="uid://b33wh3wpodvrv" path="res://Simple Tower Defense/Environment/Decoration/spr_tree_02_spruce.png" id="7_5pxul"]
[ext_resource type="PackedScene" uid="uid://gtb62b3y5fyo" path="res://ui/ui.tscn" id="7_n6hdu"]
[ext_resource type="Texture2D" uid="uid://u5mdguwfou1q" path="res://Simple Tower Defense/Environment/Decoration/spr_tree_02_normal.png" id="8_fedht"]
[ext_resource type="Texture2D" uid="uid://ddtptk5as5awm" path="res://Simple Tower Defense/Environment/Decoration/spr_rock_03.png" id="9_4c15r"]
[ext_resource type="Texture2D" uid="uid://bp0byj75ssps3" path="res://Simple Tower Defense/Environment/Decoration/spr_rock_02.png" id="10_ait7k"]
[ext_resource type="Texture2D" uid="uid://0ogptj6l3t4q" path="res://Simple Tower Defense/Environment/Decoration/spr_rock_01.png" id="11_42xju"]
[ext_resource type="Texture2D" uid="uid://b68loiovkvwba" path="res://Simple Tower Defense/Environment/Decoration/spr_mushroom_02.png" id="12_v7sqt"]
[ext_resource type="Texture2D" uid="uid://cesfs6brfehxa" path="res://Simple Tower Defense/Environment/Decoration/spr_mushroom_01.png" id="13_ilwjd"]
[ext_resource type="PackedScene" uid="uid://dlmmygc8q7j2q" path="res://castle.tscn" id="14_5pxul"]
[ext_resource type="PackedScene" uid="uid://b7st4m1k4axgh" path="res://enemies/tower_selection_ui.tscn" id="17_fedht"]

[sub_resource type="Curve2D" id="Curve2D_oi3di"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -40, 120, 0, 0, 0, 0, 88, 120, 0, 0, 0, 0, 88, 168, 0, 0, 0, 0, 56, 168, 0, 0, 0, 0, 56, 200, 0, 0, 0, 0, 136, 200, 0, 0, 0, 0, 136, 120, 0, 0, 0, 0, 184, 120, 0, 0, 0, 0, 184, 152, 0, 0, 0, 0, 200, 152, 0, 0, 0, 0, 200, 216, 0, 0, 0, 0, 248, 216, 0, 0, 0, 0, 248, 152)
}
point_count = 13

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i2t4f"]
texture = ExtResource("6_km5ld")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_f2txt"]
custom_data_layer_0/name = "Occupied"
custom_data_layer_0/type = 1
sources/1 = SubResource("TileSetAtlasSource_i2t4f")

[node name="Level" type="Node2D"]
script = ExtResource("1_u52ul")
tower_placement_offset = Vector2i(8, 16)

[node name="Grass" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_0b4ue")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 320, 180)

[node name="PathTileMapLayer" parent="." instance=ExtResource("4_f2txt")]
tile_map_data = PackedByteArray("AAAAAAQAAAABAAAAAAABAAQAAAABAAAAAAACAAQAAAABAAIAAAADAAQAAAABAAAAAAAEAAQAAAABAAIAAAAFAAQAAAABAAAAAAAGAAQAAAABAAIAAAAHAAQAAAACAAAAAAAHAAUAAAAAAAEAAAAHAAYAAAACAAEAAAAHAAcAAAACAAIAAAAGAAcAAAABAAIAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAEAAAAFAAkAAAAAAAIAAAAGAAkAAAABAAIAAAAHAAkAAAABAAIAAAAIAAkAAAABAAAAAAAJAAkAAAABAAAAAAAKAAkAAAACAAIAAAAKAAgAAAACAAEAAAAKAAcAAAACAAEAAAAKAAYAAAAAAAEAAAAKAAUAAAAAAAEAAAAKAAQAAAAAAAAAAAANAAUAAAACAAEAAAANAAYAAAAAAAIAAAAOAAYAAAACAAAAAAAOAAcAAAACAAEAAAARAAcAAAAAAAEAAAD//wQAAAABAAIAAAD+/wQAAAAAAAIAAAANAAQAAAACAAAAAAALAAQAAAABAAIAAAAMAAQAAAABAAIAAAAOAAgAAAAAAAEAAAAOAAkAAAAAAAEAAAAOAAoAAAAAAAIAAAAPAAoAAAABAAAAAAAQAAoAAAABAAAAAAARAAoAAAACAAIAAAARAAkAAAACAAEAAAARAAgAAAAAAAEAAAARAAYAAAAAAAAAAAA=")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(32, -48)
curve = SubResource("Curve2D_oi3di")

[node name="EnemyFollow2D" parent="Path2D" instance=ExtResource("4_1ainy")]
position = Vector2(-40, 120)

[node name="EnemySpawnerTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="GridPlacementTileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAMAAQAAAAAAAAABAAMAAQAAAAAAAAACAAMAAQAAAAAAAAADAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAJAAgAAQAAAAAAAAAHAAgAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAASAAUAAQAAAAAAAAATAAUAAQAAAAAAAAATAAQAAQAAAAAAAAASAAQAAQAAAAAAAAASAAMAAQAAAAAAAAATAAMAAQAAAAAAAAATAAcAAQAAAAAAAAATAAgAAQAAAAAAAAATAAkAAQAAAAAAAAATAAoAAQAAAAAAAAASAAoAAQAAAAAAAAASAAkAAQAAAAAAAAASAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAgAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAANAAcAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAoAAQAAAAAAAAALAAoAAQAAAAAAAAALAAkAAQAAAAAAAAALAAgAAQAAAAAAAAALAAcAAQAAAAAAAAAMAAYAAQAAAAAAAAALAAYAAQAAAAAAAAALAAUAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAQAAQAAAAAAAAALAAQAAQAAAAAAAAAKAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAIAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAEAAoAAQAAAAAAAAADAAoAAQAAAAAAAAABAAoAAQAAAAAAAAAAAAoAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAQAAAAAAAAACAAkAAQAAAAAAAAADAAkAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAgAAQAAAAAAAAADAAgAAQAAAAAAAAACAAgAAQAAAAAAAAABAAgAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAcAAQAAAAAAAAABAAcAAQAAAAAAAAACAAcAAQAAAAAAAAADAAcAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAYAAQAAAAAAAAADAAYAAQAAAAAAAAACAAYAAQAAAAAAAAABAAYAAQAAAAAAAAAAAAYAAQAAAAAAAAABAAUAAQAAAAAAAAACAAUAAQAAAAAAAAADAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAGAAgAAQAAAAAAAAAOAAUAAQAAAAAAAAAMAP//AQAAAAAAAAANAP//AQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAATAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAQAAcAAQAAAAAAAAAKAAMAAQAAAAAAAAALAAMAAQAAAAAAAAAMAAMAAQAAAAAAAAANAAMAAQAAAAAAAAARAAMAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_f2txt")

[node name="Decorations" type="Node2D" parent="."]

[node name="SprTree01Normal" type="Sprite2D" parent="Decorations"]
position = Vector2(8, 88)
texture = ExtResource("6_v5j5c")

[node name="SprTree01Normal2" type="Sprite2D" parent="Decorations"]
position = Vector2(40, 168)
texture = ExtResource("6_v5j5c")

[node name="SprTree01Normal3" type="Sprite2D" parent="Decorations"]
position = Vector2(200, 152)
texture = ExtResource("6_v5j5c")

[node name="SprTree01Normal4" type="Sprite2D" parent="Decorations"]
position = Vector2(264, 24)
texture = ExtResource("6_v5j5c")

[node name="SprTree01Normal5" type="Sprite2D" parent="Decorations"]
position = Vector2(232, 24)
texture = ExtResource("6_v5j5c")

[node name="SprTree01Normal6" type="Sprite2D" parent="Decorations"]
position = Vector2(232, 40)
texture = ExtResource("6_v5j5c")

[node name="SprTree01Normal7" type="Sprite2D" parent="Decorations"]
position = Vector2(200, 40)
texture = ExtResource("6_v5j5c")

[node name="SprTree01Normal8" type="Sprite2D" parent="Decorations"]
position = Vector2(184, 40)
texture = ExtResource("6_v5j5c")

[node name="SprTree02Spruce" type="Sprite2D" parent="Decorations"]
position = Vector2(24, 24)
texture = ExtResource("7_5pxul")

[node name="SprTree02Spruce2" type="Sprite2D" parent="Decorations"]
position = Vector2(280, 40)
texture = ExtResource("7_5pxul")

[node name="SprTree02Spruce3" type="Sprite2D" parent="Decorations"]
position = Vector2(264, 40)
texture = ExtResource("7_5pxul")

[node name="SprTree02Spruce4" type="Sprite2D" parent="Decorations"]
position = Vector2(248, 40)
texture = ExtResource("7_5pxul")

[node name="SprTree02Normal" type="Sprite2D" parent="Decorations"]
position = Vector2(56, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal42" type="Sprite2D" parent="Decorations"]
position = Vector2(56, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal43" type="Sprite2D" parent="Decorations"]
position = Vector2(56, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal44" type="Sprite2D" parent="Decorations"]
position = Vector2(56, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal45" type="Sprite2D" parent="Decorations"]
position = Vector2(40, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal46" type="Sprite2D" parent="Decorations"]
position = Vector2(24, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal47" type="Sprite2D" parent="Decorations"]
position = Vector2(8, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal48" type="Sprite2D" parent="Decorations"]
position = Vector2(8, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal49" type="Sprite2D" parent="Decorations"]
position = Vector2(40, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal50" type="Sprite2D" parent="Decorations"]
position = Vector2(40, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal51" type="Sprite2D" parent="Decorations"]
position = Vector2(24, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal52" type="Sprite2D" parent="Decorations"]
position = Vector2(8, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal53" type="Sprite2D" parent="Decorations"]
position = Vector2(8, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal4" type="Sprite2D" parent="Decorations"]
position = Vector2(216, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal5" type="Sprite2D" parent="Decorations"]
position = Vector2(216, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal6" type="Sprite2D" parent="Decorations"]
position = Vector2(248, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal7" type="Sprite2D" parent="Decorations"]
position = Vector2(280, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal8" type="Sprite2D" parent="Decorations"]
position = Vector2(296, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal9" type="Sprite2D" parent="Decorations"]
position = Vector2(312, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal10" type="Sprite2D" parent="Decorations"]
position = Vector2(312, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal11" type="Sprite2D" parent="Decorations"]
position = Vector2(312, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal12" type="Sprite2D" parent="Decorations"]
position = Vector2(296, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal13" type="Sprite2D" parent="Decorations"]
position = Vector2(280, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal14" type="Sprite2D" parent="Decorations"]
position = Vector2(264, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal15" type="Sprite2D" parent="Decorations"]
position = Vector2(248, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal16" type="Sprite2D" parent="Decorations"]
position = Vector2(232, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal17" type="Sprite2D" parent="Decorations"]
position = Vector2(216, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal18" type="Sprite2D" parent="Decorations"]
position = Vector2(200, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal19" type="Sprite2D" parent="Decorations"]
position = Vector2(200, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal20" type="Sprite2D" parent="Decorations"]
position = Vector2(184, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal21" type="Sprite2D" parent="Decorations"]
position = Vector2(184, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal22" type="Sprite2D" parent="Decorations"]
position = Vector2(168, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal23" type="Sprite2D" parent="Decorations"]
position = Vector2(168, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal24" type="Sprite2D" parent="Decorations"]
position = Vector2(168, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal25" type="Sprite2D" parent="Decorations"]
position = Vector2(152, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal26" type="Sprite2D" parent="Decorations"]
position = Vector2(152, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal27" type="Sprite2D" parent="Decorations"]
position = Vector2(152, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal28" type="Sprite2D" parent="Decorations"]
position = Vector2(136, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal29" type="Sprite2D" parent="Decorations"]
position = Vector2(136, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal30" type="Sprite2D" parent="Decorations"]
position = Vector2(120, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal31" type="Sprite2D" parent="Decorations"]
position = Vector2(120, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal32" type="Sprite2D" parent="Decorations"]
position = Vector2(104, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal36" type="Sprite2D" parent="Decorations"]
position = Vector2(88, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal37" type="Sprite2D" parent="Decorations"]
position = Vector2(72, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal38" type="Sprite2D" parent="Decorations"]
position = Vector2(72, 40)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal39" type="Sprite2D" parent="Decorations"]
position = Vector2(72, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal40" type="Sprite2D" parent="Decorations"]
position = Vector2(72, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal41" type="Sprite2D" parent="Decorations"]
position = Vector2(88, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal33" type="Sprite2D" parent="Decorations"]
position = Vector2(104, 24)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal34" type="Sprite2D" parent="Decorations"]
position = Vector2(104, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal35" type="Sprite2D" parent="Decorations"]
position = Vector2(104, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal3" type="Sprite2D" parent="Decorations"]
position = Vector2(120, 8)
texture = ExtResource("8_fedht")

[node name="SprTree02Normal2" type="Sprite2D" parent="Decorations"]
position = Vector2(296, 24)
texture = ExtResource("8_fedht")

[node name="SprRock03" type="Sprite2D" parent="Decorations"]
position = Vector2(24, 128)
texture = ExtResource("9_4c15r")

[node name="SprRock02" type="Sprite2D" parent="Decorations"]
position = Vector2(88, 40)
texture = ExtResource("10_ait7k")

[node name="SprRock04" type="Sprite2D" parent="Decorations"]
position = Vector2(280, 56)
texture = ExtResource("10_ait7k")

[node name="SprRock01" type="Sprite2D" parent="Decorations"]
position = Vector2(288, 176)
texture = ExtResource("11_42xju")

[node name="SprMushroom02" type="Sprite2D" parent="Decorations"]
position = Vector2(136, 40)
texture = ExtResource("12_v7sqt")

[node name="SprMushroom01" type="Sprite2D" parent="Decorations"]
position = Vector2(248, 176)
texture = ExtResource("13_ilwjd")

[node name="SprMushroom04" type="Sprite2D" parent="Decorations"]
position = Vector2(56, 112)
texture = ExtResource("13_ilwjd")

[node name="SprMushroom03" type="Sprite2D" parent="Decorations"]
position = Vector2(312, 144)
texture = ExtResource("13_ilwjd")

[node name="TowersAndCastle" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Castle" parent="TowersAndCastle" instance=ExtResource("14_5pxul")]
position = Vector2(280, 80)

[node name="TowerPlacementIndicatorSprite" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-64, -8)
centered = false
offset = Vector2(0, -7)

[node name="UI" parent="." instance=ExtResource("7_n6hdu")]

[node name="WaveLabel" type="Label" parent="UI"]
layout_mode = 0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 39.0
text = "Wave 1"

[node name="TowerSelectionUI" parent="UI" instance=ExtResource("17_fedht")]
layout_mode = 1
offset_left = 136.0
offset_right = 318.0
offset_bottom = 44.0

[connection signal="timeout" from="EnemySpawnerTimer" to="." method="_on_enemy_spawner_timer_timeout"]
